--- a/Exam_maket/fotogalereya.html
+++ b/Exam_maket/fotogalereya.html
@@ -22,7 +22,7 @@
 						 <a href="index.html">главная</a>
 						 <a href="aboutus.html">о нас</a>
 						 <a href="vidy.html">виды</a>
-						 <a href="fotogalereya.html" class="chosen">фотогалерея</a>
+						 <a href="fotogalereya.html" class="chosen">Фотогалерея</a>
 						 <a href="kontakty.html" >контакты</a>
 					 </nav>	
 					 <div class="clear"></div>
@@ -30,81 +30,81 @@
 			</header>		
             <div class="content">
                 <div class="baseinfo">
-                    <h2 class="dashed">галерея</h2>
-                    <p class="description">Представляем Вашему вниманию немного фотографий, сделанных в разных местах и отражающие некоторые популярнейшие и полезнейшие из асан.</p>
+                    <h2 class="dashed">Фотогалерея</h2>
+                    <p class="description" style="color: black;">Знакомство с видами тротуарной плитки поможет потребителю найти оптимальный вариант для облагораживания придомовой территории, создания садово-парковых или пешеходных дорожек, площадок для парковки машин.</p>
                 </div><!-- .baseinfo-->
                 <div class="gallerybox">
                     <ul class="photos">
                         <li class="leftcolumn">
                             <div class="frame">
-                                <a href="#"><img src="img/gallery/yogacamel12.jpg" alt="camel"></a>
-                                <p>поза верблюда</p>
+                                <a href="#"><img src="images/fotogallereya/Giperpressovannaja.jpg" alt="Giperpressovannaja"></a>
+                                <p>Гиперпрессованная</p>
                             </div>
                         </li>
                         <li class="rightcolumn">
                             <div class="frame">
-                                <a href="#"><img src="img/gallery/yogadog12.jpg" alt="dog"></a>
-                                <p>поза собаки с головой, опущенной вниз</p>
+                                <a href="#"><img src="images/fotogallereya/granitnaja-plitka.jpg" alt="granitnaja-plitka"></a>
+                                <p>Гранитная плита</p>
                             </div>
                         </li>
                         <li class="leftcolumn">
                             <div class="frame">
-                                <a href="#"><img src="img/gallery/yogafrogpose12.jpg" alt="frog"></a>
-                                <p>поза жабы</p>
+                                <a href="#"><img src="images/fotogallereya/klinkernaja-plitka.jpg" alt="klinkernaja-plitka"></a>
+                                <p>Клинкерная плитка</p>
                             </div>
                         </li>
                         <li class="rightcolumn">
                             <div class="frame">
-                                <a href="#"><img src="img/gallery/yogakid12.jpg" alt="straightangle"></a>
-                                <p>поза прямого угла</p>
+                                <a href="#"><img src="images/fotogallereya/klinkernaja-plitka-2.jpg" alt="klinkernaja-plitka-2"></a>
+                                <p>Клинкерная плитка(2)</p>
                             </div>
                         </li>
                         <li class="leftcolumn">
                             <div class="frame">
-                                <a href="#"><img src="img/gallery/yogatree12.jpg" alt="tree"></a>
-                                <p>поза дерева</p>
+                                <a href="#"><img src="images/fotogallereya/Kolotaja-granitnaja-plitka.jpg" alt="Kolotaja-granitnaja-plitka"></a>
+                                <p>Колотая гранитная плитка</p>
                             </div>
                         </li>
                         <li class="rightcolumn">
                             <div class="frame">
-                                <a href="#"><img src="img/gallery/yogatree212.jpg" alt="tree"></a>
-                                <p>поза дерева</p>
+                                <a href="#"><img src="images/fotogallereya/Pileno-kolotaja-granitnaja-plitka.jpg" alt="Pileno-kolotaja-granitnaja-plitka"></a>
+                                <p>Пилено-колотая гранитная плитка</p>
                             </div>
                         </li>
                         <li class="leftcolumn">
                             <div class="frame">
-                                <a href="#"><img src="img/gallery/yogaupdog12.jpg" alt="updog"></a>
-                                <p>поза собаки с головой, поднятой вверх</p>
+                                <a href="#"><img src="images/fotogallereya/Polimerno-peschanaja-plitka.jpg" alt="Polimerno-peschanaja-plitka"></a>
+                                <p>Полимерно-песчаная плитка</p>
                             </div>
                         </li>
                         <li class="rightcolumn">
                             <div class="frame">
-                                <a href="#"><img src="img/gallery/yogawarrior12.jpg" alt="warrior1"></a>
-                                <p>поза воина &#8544;</p>
+                                <a href="#"><img src="images/fotogallereya/Polnopilenaja-granitnaja-plitka.jpg" alt="Polnopilenaja-granitnaja-plitka"></a>
+                                <p>Полнопиленая гранитная плитка</p>
                             </div>
                         </li>
                         <li class="leftcolumn">
                             <div class="frame">
-                                <a href="#"><img src="img/gallery/yogawarrior212.jpg" alt="warrior2"></a>
-                                <p>поза воина &#8545;</p>
+                                <a href="#"><img src="images/fotogallereya/Polnopilennaja-polirovannaja-granitnaja-plitka.jpg" alt="Polnopilennaja-polirovannaja-granitnaja-plitka"></a>
+                                <p>Полнопиленная полированная гранитная</p>
                             </div>
                         </li>
                         <li class="rightcolumn">
                             <div class="frame">
-                                <a href="#"><img src="img/gallery/yogawarrior312.jpg" alt="warrior3"></a>
-                                <p>поза воина &#8546;</p>
+                                <a href="#"><img src="images/fotogallereya/Rezinovaja-plitka-holodnogo-pressovanija.jpg" alt="Rezinovaja-plitka-holodnogo-pressovanija"></a>
+                                <p>Резиновая плитка</p>
                             </div>
                         </li>
                         <li class="leftcolumn">
                             <div class="frame">
-                                <a href="#"><img src="img/gallery/yogawiseman12.jpg" alt="wiseman"></a>
-                                <p>поза мудреца</p>
+                                <a href="#"><img src="images/fotogallereya/Vibrolitaja.jpg" alt="Vibrolitaja"></a>
+                                <p>Вибролитая</p>
                             </div>
                         </li>
                         <li class="rightcolumn">
                             <div class="frame">
-                                <a href="#"><img src="img/gallery/yogatriangle12.jpg" alt="triangle"></a>
-                                <p>поза треугольника</p>
+                                <a href="#"><img src="images/fotogallereya/Vibropressovannaja.jpg" alt="Vibropressovannaja"></a>
+                                <p>Вибропрессованная</p>
                             </div>
                         </li>
                     </ul>
