--- a/Exam_maket/vidy.html
+++ b/Exam_maket/vidy.html
@@ -30,47 +30,137 @@
 			</header>
             <div class="content">
                 <div class="baseinfo">
-                <h2 class="dashed">классы</h2>
-                <p class="description"> Причины, по которым тот или иной человек занимается йогой, могут быть очень разными. Йога &mdash; это наука, а не религия. И ее в том или ином виде может познать любой человек вне зависимости от возраста и физического состояния.</p><a name="kidsyoga"></a>
+                <h2 class="dashed">Виды</h2>
+                <p class="description" style="color: black;"> В ландшафтном дизайне для благоустройства территории, мощения садово-парковых, пешеходных дорожек используются разные виды тротуарной плитки, многообразие этого строительного материала очень большое, что часто затрудняет выбор.</p>
                 </div>
                 <div class="sectioncontainer">
                     <div class="vidyclass">
                         <div class="minorsection">
-                            <h3>Йога для детей</h3>
-                            <p class="short">Детская йога &mdash; это соединение классической йоги и веселых физических упражнений. Это курс хатха-йоги, построенный с учетом психологических, физиологических и анатомических особенностей детей и дополненный специальными упражнениями йоги на развитие концентрации, памяти и внимания, а также коррекцию зрения и осанки. В процессе занятия спокойные и неподвижные дети начинают вести себя активно, а гиперактивные дети развивают усидчивость и умение концентрировать внимание. Методика и материал подобраны согласно возрастным возможностям детей и учитывают индивидуальные особенности развития каждого ребёнка.</p>
-                            <p class="short">Основное наполнение занятий - это асаны в сочетании с дыхательными упражнениями. Система йоги в веселой, игровой форме показывает, как дети могут направить свою естественную энергию на укрепление здоровья. Детская йога помогает укрепить внутренние органы, развить гибкость и улучшить общее состояние ребят. Йога для детей способствует развитию спокойствия, концентрации и эмоционального равновесия.</p>
+                            <h3 style="margin-left: 8px;">Вибропрессованная</h3>
+                            <p class="short" style="color: black;">Получается методом прессования с вибрационной утрамбовкой смеси бетона с водой. Вибротрамбовка полностью удаляет воздушные пузырьки из раствора, уплотняя и повышая прочность застывшей массы. Получается плотный продукт, выдерживающий большие нагрузки, поэтому он подходит для мощения парковочных мест, может укладываться в северных регионах.</p>
                         </div>
                         <div class="mainsection">
                             <div class="textblock">
-                                <img src="img/kids1.jpg">
+                                <img src="images/vidy/Vibropressovannaja.jpg">
                             </div>
                         </div>
                         <div class="clear"></div>
                     </div>
-                    <div class="vidyclass"><a name="hathayoga"></a>
+                    <div class="vidyclass">
                         <div class="minorsection">
-                            <h3>Хатха-йога</h3>
-                            <p class="short">Хатха-йога является частью раджа-йоги и служит для подготовки тела к духовной стороне раджа-йоги. Хатха-йога включает в себя <span>физические упражнения, дыхательные упражнения, очищение внутренних органов, умение расслабляться, правильное питание.</span></p>
-                            <p class="short">Хатха-йога может быть использована вне рамок индуизма как система поддержания тела в оптимальном состоянии особенно подходящая для людей умственного труда и людей с духовными интересами.</p>
-                            <p class="short">Занятия физической культурой заключаются в движениях, йогой --- в основном в практике асан, то есть неподвижных позиций тела. Йога делает ударение на развитие гибкости, здоровья суставов, при этом особенное внимание обращается на поддержание здоровья, гибкости и силы позвоночника.</p>
-                            <p class="short">Уникальной - и часто упускаемой из вида - особенностью йоги, не имеющей аналога в европейской физической культуре, являются упражнения стимулирующие гормональные железы и осуществляющие массаж внутренних органов. Стимуляция гормональной системы помогает сбалансировать эмоции и приобрести более оптимистический взгляд на жизнь. </p>
+                            <h3 style="margin-left: 8px;">Вибролитая</h3>
+                            <p class="short" style="color: black;">Это более простая технология: раствор заливается в формы, установленные на вибрирующей поверхности. Вибролитая бетонная плитка выдерживает меньшие нагрузки, чем предыдущий вариант. Она подходит для создания пешеходных дорожек, обустройства придомовой территории частных домов.</span></p>
                         </div>
                         <div class="mainsection">
                             <div class="textblock">
-                                <img src="img/hathayoga1.jpg">
+                                <img src="images/vidy/Vibrolitaja.jpg">
                             </div>
                         </div>
                     </div>
                     <div class="vidyclass">
-                        <div class="minorsection"><a name="prenatalyoga"></a>
-                            <h3>Йога для будущих мам</h3>
-                            <p class="short">Йога для беременных представляет собой специальный комплекс упражнений, модифицированных специально для женщин в "волшебном" состоянии и направленных на улучшение физического и эмоционального состояния будущей мамы, единения организма женщины с организмом ее ребенка.</p>
-                            <p class="short">Во время занятий йогой для беременных идет подготовка организма женщины к предстоящим нагрузкам, как во время всего периода беременности, так и к здоровым и безболезненным родам. Плавные, мягкие, контролируемые упражнения развивают мышцы таза, в связи с чем они идеально переносят возрастающую нагрузку без возникновения дискомфорта и боли. Йога помогает укрепить и позвоночник, на который возлагается огромная нагрузка.</p>
-                            <p class="short">Расслабляющие дыхательные упражнения и асаны помогают концентрировать внимание женщины на внутреннем ее состоянии, оставаться спокойной и сосредоточенной, а в период родов лучше контролировать боль.</p>
+                        <div class="minorsection">
+                            <h3 style="margin-left: 8px;">Гиперпрессованная</h3>
+                            <p class="short" style="color: black;">Раствор прессуется под большим давлением на высокотехнологичных гидропрессах. В результате все компоненты склеиваются между собой (похоже на холодную сварку), получается сверхпрочный плиточный материал. При производстве данной плитки используется гидропресс.</p>
                         </div>
                         <div class="mainsection">
                             <div class="textblock">
-                                <img src="img/pregnant3.jpg">
+                                <img src="images/vidy/Giperpressovannaja.jpg">
+                            </div>
+                        </div>
+                        <div class="clear"></div>
+                    </div>
+                    <div class="vidyclass">
+                        <div class="minorsection">
+                            <h3 style="margin-left: 8px;">Клинкерная плитка</h3>
+                            <p class="short" style="color: black;">Клинкерные разновидности тротуарной плитки наиболее твердые из всех известных на рынке. Они изготавливаются из клинкера – керамики из особых сортов глины, высокая прочность которой достигается методом обжига при температуре выше 1200 градусов C. Это достаточно дорогой материал. Благородный вид, ударостойкость, низкое водопоглощение – основные достоинства продукта. Клинкер обладает антискользящим эффектом, обеспечивающим прочное сцепление обуви с поверхностью даже во время дождя.</p>
+                        </div>
+                        <div class="mainsection">
+                            <div class="textblock">
+                                <img src="images/vidy/klinkernaja-plitka.jpg">
+                            </div>
+                        </div>
+                        <div class="clear"></div>
+                    </div>
+                    <div class="vidyclass">
+                        <div class="minorsection">
+                            <h3 style="margin-left: 8px;">Резиновая плитка</h3>
+                            <p class="short" style="color: black;">Резиновое тротуарное покрытие пластичное, дешевое, безопасное в пользовании. Оно подойдет для оформления детских площадок, участков, где люди занимаются физкультурой и спортом. Продукция делается из резиновой крошки с фракцией от 0,6 до 3 мм. По технологии прессования она делится на горячепресованную и холоднопресованную.</p>
+                        </div>
+                        <div class="mainsection">
+                            <div class="textblock">
+                                <img src="images/vidy/Rezinovaja-plitka-holodnogo-pressovanija.jpg">
+                            </div>
+                        </div>
+                        <div class="clear"></div>
+                    </div>
+                    <div class="vidyclass">
+                        <div class="minorsection">
+                            <h3 style="margin-left: 8px;">Полимерно-песчаная плитка</h3>
+                            <p class="short" style="color: black;">Другое название полимерно-песчаной тротуарной плитки – пластиковая. Она производится из песка с добавлением клейких полимеров и красителей, без использования цемента.</p>
+                        </div>
+                        <div class="mainsection">
+                            <div class="textblock">
+                                <img src="images/vidy/Polimerno-peschanaja-plitka.jpg">
+                            </div>
+                        </div>
+                        <div class="clear"></div>
+                    </div>
+                    <div class="vidyclass">
+                        <div class="minorsection">
+                            <h3 style="margin-left: 8px;">Гранитная плитка</h3>
+                            <p class="short" style="color: black;">Гранитная брусчатка делается из натурального камня. Стандартные размеры составляют 100*100*50 мм, вес природного материала немалый – около 100 кг/ кв. м. Тяжеловесный, прочный, привлекательный камень позволяет мостить придомовые или общественные участки на века. Кроме того, в отличие от других моделей тротуарного покрытия гранитное можно снимать с грунта без опасений его повреждения, а затем укладывать заново.</p>
+                        </div>
+                        <div class="mainsection">
+                            <div class="textblock">
+                                <img src="images/vidy/granitnaja-plitka.jpg">
+                            </div>
+                        </div>
+                        <div class="clear"></div>
+                    </div>
+                    <div class="vidyclass">
+                        <div class="minorsection">
+                            <h3 style="margin-left: 8px;">Колотая гранитная плитка</h3>
+                            <p class="short" style="color: black;">Это прямоугольный параллелепипед, грани которого образованы методом скола цельного камня, поэтому они имеют рваную структуру. В результате мощения дорожки колотым гранитом она приобретает естественный вид: швы между камнем широкие, а поверхность обладает естественными неровностями. Колотая плиточная продукция подойдет для облагораживания домов, оформленных в исторических стилях или кантри.</p>
+                        </div>
+                        <div class="mainsection">
+                            <div class="textblock">
+                                <img src="images/vidy/Kolotaja-granitnaja-plitka.jpg">
+                            </div>
+                        </div>
+                        <div class="clear"></div>
+                    </div>
+                    <div class="vidyclass">
+                        <div class="minorsection">
+                            <h3 style="margin-left: 8px;">Пилено-колотая гранитная плитка</h3>
+                            <p class="short" style="color: black;">У этих моделей боковые грани спилены, поэтому они гладкие, а поверхность неровная колотая. Швы у такой композиции тонкие, так как отдельные элементы укладываются вплотную, при этом сама дорожка получается с естественными неровностями природного камня.</p>
+                        </div>
+                        <div class="mainsection">
+                            <div class="textblock">
+                                <img src="images/vidy/Pileno-kolotaja-granitnaja-plitka.jpg">
+                            </div>
+                        </div>
+                        <div class="clear"></div>
+                    </div>
+                    <div class="vidyclass">
+                        <div class="minorsection">
+                            <h3 style="margin-left: 8px;">Полнопиленая гранитная плитка</h3>
+                            <p class="short" style="color: black;">Грани полнопиленного гранита спиливаются со всех сторон, поэтому он не имеет рваных плоскостей с естественным рельефом. Этот гладкий материал дает на участке геометрически идеальные по форме композиции. Стоит полнопиленная брусчатка дороже продукта с колотыми гранями.</p>
+                        </div>
+                        <div class="mainsection">
+                            <div class="textblock">
+                                <img src="images/vidy/Polnopilenaja-granitnaja-plitka.jpg">
+                            </div>
+                        </div>
+                        <div class="clear"></div>
+                    </div>
+                    <div class="vidyclass">
+                        <div class="minorsection">
+                            <h3 style="margin-left: 8px;">Полнопиленная полированная гранитная плитка</h3>
+                            <p class="short" style="color: black;">Ее верхняя поверхность полируется до блеска. В результате обработки получается прямоугольный параллелепипед идеальной формы с глянцевым полированным блеском на верхней плоскости.</p>
+                        </div>
+                        <div class="mainsection" style="margin-bottom: 70px;">
+                            <div class="textblock">
+                                <img src="images/vidy/Polnopilennaja-polirovannaja-granitnaja-plitka.jpg">
                             </div>
                         </div>
                         <div class="clear"></div>
@@ -78,12 +168,12 @@
                 </div>
             </div>
             <footer>
-				<div class="line"></div><!-- .line -->
+				<div class="line"></div>
 				<div class="content">
 					<div class="shortinfo">
 						<h3 class="white">О нас</h3>
 						<p style="color: white;">Наша компания готова помочь вам и с первым и со вторым аспектом данной задачи. В нашем каталоге вы сможете подобрать желаемый вариант материала и сразу заказать профессиональную укладку на вашем участке. Вниманию покупателей всегда доступна качественная и прочная тротуарная плитка от производителя по оптимальной стоимости.</p>
-					</div><!-- .shortinfo -->
+					</div>
 					<div class="shortinfo">
 						<h3 class="white">Реквизиты</h3>
 						<p style="color: white;">ООО «Производственная компания Мастерстрой»<br>
@@ -91,7 +181,7 @@
 							Р/С: : BY00 BPSB 0000 0000 0000 0000 0000<br>
 							В ОАО «СБЕР БАНК» БИК BPSBBY2X в BYN<br>
 							Банк: BY43BPSB30123273720179330000</p>
-					</div><!-- .shortinfo -->
+					</div>
 					<div class="shortinfo">
 						<h3 class="white">Рассылка</h3>
 						<p style="color: white;">Подпишитесь на нашу рассылку, чтобы получать информацию о проходящих акциях регулярно!</p>
@@ -99,7 +189,7 @@
 							<input type="text" style="color:rgb(166,175,176); background-color: white;" name="e-mail" placeholder="ваш e-mail" class="borderless">
 							<button type="submit" class="btn btn-success" style="text-align: right; width: auto;">Подписаться</button>
 						</form>
-					</div><!-- .shortinfo -->
+					</div>
 					<div class="shortinfo">
 						<h3 class="white">Контакты</h3>
 						<p style="color: white;">г. Минск, ул. Брикета, 1, 1-й этаж, офис 111.</p>
@@ -107,9 +197,9 @@
 							<li style="color: white;"><span style="color: white;">Телефон:&nbsp; </span> +375 (29) 111-11-11</li>
 							<li><span>E-mail:&nbsp; </span> <span>masterstr@mail.ru</span></li>
 						</ul>
-					</div><!-- .shortinfo -->
+					</div>
 					<div class="clear"></div>
-				</div><!-- .content -->		
+				</div>
 			</footer>
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
