--- a/index.html
+++ b/index.html
@@ -51,5 +51,8 @@
     <h4>ДЗ</h4>
     <a href="Homework/js1/anketa_if.html" target="_blank">anketa_if</a><br>
     <a href="Homework/js1/anketa_oper.html" target="_blank">anketa_oper</a><br>
+    <h3>Exam maket</h3>
+    <h4>Exam</h4>
+    <a href="Exam_maket/index.html" target="_blank">Exam</a><br>
 </body>
 </html>
